# arxiv_mcp

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
arxiv_mcp/: __init__.py  mistral_ocr.py  server.py  utils.py
src/: mistral_ocr.py  server.py
