[project]
name = "arxiv-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "mcp>=1.12.2",
    "mistralai>=1.9.3",
    "pypdf2>=3.0.1",
    "python-dotenv",
]

[project.scripts]
arxiv-mcp = "arxiv_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_mcp"]
